# blender-asset-packager-minimal

./: .gitignore  AGENTS.md  CLAUDE.md  NEXT_STEPS.md  PROJECT_CONTRACT.md  README.md  RELATED_WORK.md  SAMPLE_SCOPE.md  SDD_ADD_BACKGROUND.md  SDD_ADD_BACKGROUND_JA.md  STATE.yaml  TUTORIAL.md  WORKFLOW.md  pyproject.toml  run_demo.bat
.claude/agents/: spec-reviewer.md
.codex/agents/: spec-reviewer.toml
examples/shot001/: README.md
examples/shot001/assets/char_hero/model/: hero_model.blend
examples/shot001/interchange/: hero_preview.glb
scripts/: check_boundaries.py  validate.py
src/assetpack/: __init__.py  cli.py  manifest.py  paths.py
tasks/000_scan_validate_plan/: result.md  spec.md
tasks/010_safe_copy_todo/: spec.md
tests/: test_assetpack.py
