[project]
name = "blender-asset-packager-minimal"
version = "0.1.0"
description = "Tiny tool-agnostic spec-driven Blender-style asset packaging sample with Codex and Claude Code examples"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
assetpack = "assetpack.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
